# sill

./: .gitignore  Cargo.toml  README.md
src/: config.rs  default.bashrc  font.rs  grid_ui.rs  hwr.rs  ink_type.rs  intro.md  lib.rs  main.rs  sill.toml  templates.json  text_buffer.rs  text_window.rs  util.rs  widgets.rs
