[package]
name = "sill"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
clap = "3.1.13"
itertools = "0.10.3"
once_cell = "1.10.0"
rusttype = "0.8.2"
serde = "1.0.136"
serde_json = "1.0.78"
textwrap = "0.15.0"
toml = "0.5.9"
uuid = { version = "0.8.2", features = ["v4"] }
xdg = "2.4.1"

# armrest = { path = "../armrest", default-features = false }
armrest = { git = "https://github.com/bkirwi/armrest", default-features = false }
